@startuml
' skinparam monochrome true
skinparam classAttributeIcon true
left to right direction

' Lớp Users
class Users {
  +id: int <<PK>>
  +student_id: string <<unique>>
  +email: string <<unique>>
  +name: string
  +role: string
  +status: string
  +class_id: string <<nullable>>
  +faculty: string <<nullable>>
  +contact_info: text <<nullable>>
  +created_at: DateTime
  +updated_at: DateTime
  +getUserIdentifier(): string
  +getRoles(): array
}

' Lớp Activities
class Activities {
  +id: int <<PK>>
  +title: string
  +description: text <<nullable>>
  +date: DateTime <<nullable>>
  +time: DateTime <<nullable>>
  +location: string <<nullable>>
  +status: string
  +image: string <<nullable>>
  +created_by: int <<FK>>
  +created_at: DateTime
  +updated_at: DateTime
  +addParticipant(participant: ActivityParticipant): void
  +removeParticipant(participant: ActivityParticipant): void
}

' Lớp Attendances
class Attendances {
  +id: int <<PK>>
  +user_id: int <<FK>>
  +activity_id: int <<FK>>
  +status: string
  +remark: text <<nullable>>
  +marked_at: DateTime
  +marked_by: int <<FK>>
  +setStatus(status: string): void
}

' Lớp Funds
class Funds {
  +id: int <<PK>>
  +transaction_type: string
  +amount: decimal
  +date: DateTime
  +description: text <<nullable>>
  +created_by: int <<FK>>
  +created_at: DateTime
  +updated_at: DateTime
  +setTransactionType(type: string): void
  +setAmount(amount: decimal): void
}

' Lớp Proposals
class Proposals {
  +id: int <<PK>>
  +user_id: int <<FK>>
  +type: string
  +content: text
  +proposed_changes: json <<nullable>>
  +status: string
  +created_at: DateTime
  +updated_at: DateTime
  +setStatus(status: string): void
}

' Lớp ActivityParticipant
class ActivityParticipant {
  +id: int <<PK>>
  +activity_id: int <<FK>>
  +user_id: int <<FK>>
  +joined_at: DateTime
  +status: string
  +setJoinedAt(date: DateTime): void
}

' Mối quan hệ giữa các lớp
Users "1" -- "0..*" Activities
Users "1" -- "0..*" Attendances
Users "1" -- "0..*" Attendances
Activities "1" -- "0..*" Attendances
Users "1" -- "0..*" Funds
Users "1" -- "0..*" Proposals
Users "1" -- "0..*" ActivityParticipant
Activities "1" -- "0..*" ActivityParticipant

' Ghi chú về vai trò
note right of Users
  Vai trò (role):
  - MEMBER
  - ADMIN
  - TREASURER
end note

@enduml